--- a/week4/source/sass/all.scss
+++ b/week4/source/sass/all.scss
@@ -18,6 +18,9 @@
 @import "./components/classic";
 @import "./components/joint";
 @import "./components/card";
+@import "./components/form-contact";
+@import "./layout/footer";
+
 
 // header.header{
 //     background: $primary;
