--- a/week4/source/sass/layout/_header.scss
+++ b/week4/source/sass/layout/_header.scss
@@ -4,6 +4,7 @@ header.header{
     color:#fff;//a無法繼承
     @include phone(){
         height: 50px;
+        padding: 5px 0;
     }
     .container{
         // max-width:1920px;//
@@ -20,11 +21,12 @@ header.header{
     }
     .ham-icon{
         display: none;
+        color: #fff;
         
         @include phone(){
             display: block;
             position: absolute;
-            top: 10px;
+            top: 5px;
             // left: 16/375%;//?如何加入算式
 
             left: 4.2%;
@@ -32,6 +34,7 @@ header.header{
             // height: 0;
             // padding-bottom: 6.4%;//?
             text-align: center;
+            // background-color: #fff;
             i{
                 // display: block;
                 font-size: 32px;
@@ -55,6 +58,9 @@ header.header{
         @include phone(){
             width: 12.8%;//48/375
             margin: 0;
+            img{
+                width: 100%;//
+            }
         }
     }
 
@@ -87,12 +93,16 @@ header.header{
             width: 100%;
             // height: 0;//無校
             max-height: 0;
+            // height: 0;
             overflow: hidden;//不然字會出現
             background-color: $primary;
             color:#fff;
-            transition:all .35s;
+            transition:all .45s;
+            // transition:all .6s;
+            // transition:height .35s;//無效
             &.active{
                 // height: auto;??為何無效
+                // height: 252px;
                 max-height: 252px;//63x4 ?這邊max-height的用處跟一定要給死高度嗎
             }
             li{
