--- a/glasses_rwd/src/sass/all.scss
+++ b/glasses_rwd/src/sass/all.scss
@@ -7,7 +7,7 @@
 // //include path?
 @import "../../../node_modules/bootstrap/scss/utilities";
 //bs4 沒有reset
-@import "./helpers/reset";
+// @import "./helpers/reset";
 @import "./helpers/media";
 
 @import "./helpers/init";
