--- a/dashboard/src/sass/helpers/_custom.scss
+++ b/dashboard/src/sass/helpers/_custom.scss
@@ -1,8 +1,45 @@
+*{
+    // line-height: 1.5;
+}
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/materialicons/v51/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
+  }
+  
+  .material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+  }
+.bg-green{
+    background-color: #EDF4EE;
+}
 .main{
     min-height: 100vh;
 }
 .sidebar-sticky{
-    position: fixed;
-    top: 0;
-    left: 0;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // bottom: 0;//!!原本外面row會占滿高 但因為是postion會縮
+
+    // padding: 48px 0 0;
+    padding: 0px 0 0;
+    // min-height: 100vh;//!!會吃不到
+    height: 100vh;//!!!視窗拉多高就多高
+}
+.inline-flex{
+    display: inline-flex;
 }
