--- a/dashboard/src/sass/all.scss
+++ b/dashboard/src/sass/all.scss
@@ -15,7 +15,10 @@
 // @import "grid";
 // @import "utilities";
 
+// @為何文件說新變數要再bootstrap之前，不是可以覆蓋嗎
 @import "bootstrap";
+@import "./helpers/variables";//?放這邊才能蓋過去
+@import "./helpers/base";
+@import "./helpers/component";
+@import "./helpers/custom";
 // @import "~bootstrap/scss/bootstrap";
-
-@import "./helpers/_custom.scss"
