--- a/dashboard/src/sass/helpers/_component.scss
+++ b/dashboard/src/sass/helpers/_component.scss
@@ -5,12 +5,12 @@
 // @@!btb要自己加
 //##建立自己的元件
 @each $color, $value in $theme-colors {
-    .btn-#{$color} {
-    //   background-color: $value;
-        // color: $value;
-        // @!!yia這樣用
-        // background-color:color-yiq($value);
-    }
+    // .btn-#{$color} {
+    // //   background-color: $value;
+    //     // color: $value;
+    //     // @!!yia這樣用
+    //     // background-color:color-yiq($value);
+    // }
     .hover-#{$color} {
         &:hover{
             color: $value;
