--- a/dashboard/src/sass/helpers/_variables.scss
+++ b/dashboard/src/sass/helpers/_variables.scss
@@ -1,5 +1,5 @@
 // Variables
-//
+//@加入微軟正黑體Microsoft JhengHei
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 // @是不是要放上面才能吃到
@@ -79,8 +79,10 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
+// $primary:       $blue !default;
+// $secondary:     $gray-600 !default;
+$primary:       $brand-primary-light;
+$secondary:     $brand-secondary;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -97,7 +99,9 @@ $theme-colors: () !default;
 $theme-colors: map-merge(
   (
     "primary":    $primary,
-    "secondary":  $secondary,
+    // "secondary":  $secondary,
+    // "secondary":  $brand-secondary,
+    "secondary":  #2A8356,
     "success":    $success,
     // "info":       $info,
     "info":       $brand-secondary,
@@ -302,7 +306,7 @@ $embed-responsive-aspect-ratios: join(
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",'Microsoft JhengHei', Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
