--- a/dashboard/src/sass/all.scss
+++ b/dashboard/src/sass/all.scss
@@ -17,6 +17,8 @@
 
 // @為何文件說新變數要再bootstrap之前，不是可以覆蓋嗎
 @import "bootstrap";
+@import "reboot";//@@這個要加嗎
+@import "./helpers/init";
 @import "./helpers/variables";//?放這邊才能蓋過去
 @import "./helpers/base";
 @import "./helpers/component";
