--- a/dashboard/src/sass/helpers/_variables.scss
+++ b/dashboard/src/sass/helpers/_variables.scss
@@ -113,6 +113,8 @@ $theme-colors: map-merge(
     "dark1":       $brand-secondary,
     // 新增
     "green": $brand-primary-light,
+    // @@用再$link-color也無效
+    "brand-dark":$brand-dark
   ),
   $theme-colors
 );
@@ -204,7 +206,8 @@ $body-color:                $gray-900 !default;
 //
 // Style anchor elements.
 
-$link-color:                              theme-color("primary") !default;
+// $link-color:                              theme-color("primary") !default;
+$link-color:                              theme-color("brand-dark") !default;
 $link-decoration:                         none !default;
 // $link-hover-color:                        darken($link-color, 15%) !default;
 $link-hover-decoration:                   underline !default;
