--- a/dashboard/src/sass/helpers/_variables.scss
+++ b/dashboard/src/sass/helpers/_variables.scss
@@ -174,7 +174,8 @@ $spacers: map-merge(
     2: ($spacer * .5),
     3: $spacer,
     4: ($spacer * 1.5),
-    5: ($spacer * 3)
+    // 5: ($spacer * 3)
+    5: ($spacer * 2)
   ),
   $spacers
 );
