--- a/dashboard/src/sass/all.scss
+++ b/dashboard/src/sass/all.scss
@@ -1,5 +1,8 @@
-@import "/node_modules/bootstrap/scss/functions";
-@import "/node_modules/bootstrap/scss/mixins";
+// @import "/node_modules/bootstrap/scss/functions";
+// @import "/node_modules/bootstrap/scss/mixins";
+@import "functions";
+// @import "./helpers/variables";
+@import "mixins";
 // @import "./helper/variables";
 
 // @import "/node_modules/bootstrap/scss/reboot";
@@ -16,12 +19,14 @@
 // @import "utilities";
 
 // @為何文件說新變數要再bootstrap之前，不是可以覆蓋嗎
+@import "./helpers/variables";//放這邊才能蓋過去?
 @import "bootstrap";
-@import "reboot";//@@這個要加嗎
+// @import "reboot";//@@這個要加嗎
 @import "./helpers/init";
-@import "./helpers/variables";//?放這邊才能蓋過去
 @import "./helpers/base";
-@import "./components/component";
+// @import "./helpers/variables";
+// @import "./components/component";
+@import "./helpers/component";
 @import "./helpers/custom";
 @import "./helpers/util";
 // @import "./helpers/variables";//?放這邊才能蓋過去
