--- a/dashboard/src/sass/helpers/_variables.scss
+++ b/dashboard/src/sass/helpers/_variables.scss
@@ -1,13 +1,10 @@
 // Variables
 //@加入微軟正黑體Microsoft JhengHei
-// Variables should follow the `$component-state-property-size` formula for
-// consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
-// @是不是要放上面才能吃到
-// @设记上这样分好吗
-$brand-primary-light:#EDF4EE;
-$brand-primary-dark:#CDDDCD;
-$brand-secondary:#2A8356;
-$brand-dark:#121212;
+// @自訂變數放上面才能吃到
+$brand-primary-light:#EDF4EE;//primary
+$brand-primary-dark:#CDDDCD;//primary
+$brand-secondary:#2A8356;//secondary
+$brand-dark:#121212;//dark
 
 $bg-green: #EDF4EE;//!!!!!喔喔要寫前面才吃得到
 $bg-green-dark:#CDDDCD;
@@ -65,11 +62,7 @@ $colors: map-merge(
     "red":        $red,
     "orange":     $orange,
     "yellow":     $yellow,
-    // "green":      $green,
-    // "green":      $bg-green,
-    "green":      $brand-primary-light,
-    // 新增
-    "green-dark": $brand-secondary,        
+    "green":      $green,  
     "teal":       $teal,
     "cyan":       $cyan,
     "white":      $white,
@@ -78,46 +71,41 @@ $colors: map-merge(
   ),
   $colors
 );
-
-// $primary:       $blue !default;
-// $secondary:     $gray-600 !default;
-$primary:       $brand-primary-light;
-$secondary:     $brand-secondary;
+// =========================================
+$primary:       $brand-primary-light;//$blue !default;
+$secondary:     $brand-secondary;// $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
-$warning:       $yellow !default;
+$warning:       #E3006E;//$yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
+// -------其他自定義-----------------------
+$black:$brand-dark;
 
-// $brand-primary:#EDF4EE;
-// $bg-green: #EDF4EE;//!!!!!喔喔要寫前面才吃得到
-// $bg-green-dark:#CDDDCD;
 
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
   (
     "primary":    $primary,
-    // "secondary":  $secondary,
-    // "secondary":  $brand-secondary,
-    "secondary":  #2A8356,
+    "secondary":  $secondary,
     "success":    $success,
-    // "info":       $info,
-    "info":       $brand-secondary,
+    "info":       $info,
+    // @@btn-warning失敗 
     "warning":    $warning,
     "danger":     $danger,
     "light":      $light,
-    // "dark":       $dark,
-    // @@為何無法蓋過原本的dark 要刪掉上面的dark
-    "dark1":       $brand-secondary,
-    // 新增
-    "green": $brand-primary-light,
-    // @@用再$link-color也無效
-    "brand-dark":$brand-dark
+    "dark":       $dark,
+    // --------自定義------------------
+    "black":$black,
+    
   ),
   $theme-colors
 );
+// ========================================
+
+
 
 // Set a specific jump point for requesting color jumps
 $theme-color-interval:      8% !default;
@@ -840,7 +828,7 @@ $pagination-border-color:           $gray-300 !default;
 $pagination-focus-box-shadow:       $input-btn-focus-box-shadow !default;
 $pagination-focus-outline:          0 !default;
 
-$pagination-hover-color:            $link-hover-color !default;
+// $pagination-hover-color:            $link-hover-color !default;
 $pagination-hover-bg:               $gray-200 !default;
 $pagination-hover-border-color:     $gray-300 !default;
 
